traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:10: error: not enough arguments for method marque: (x: Int)Unit.
Unspecified value parameter x.
      marque()
            ^